# textsplit-aux2

./: Cargo.toml  LICENSE  README.md
src/: entry.rs  lib.rs  parser.rs
src/parser/: alignment.rs  markup.rs
