[package]
name = "textsplit"
version = "0.1.1"
edition = "2024"

[dependencies]
aviutl2 = { git = "https://github.com/sevenc-nanashi/aviutl2-rs.git", branch = "feat/plugin2" }
nom = "8.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "textsplit"
crate-type = ["cdylib"]
